data/raw_logs/semantic/sem_17.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_17.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_17.c:1:1: error: label 'label' used but not defined
    1 | int main() { goto label; }
      | ^~~
